# OrzaSteel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  orzasteel.qt.pro
config/: config.cmake
src/assets/necks/: basic-white.xcf  basic-wood.xcf
src/assets/tonebars/: malort.xcf  pbr-tonebar.xcf
src/common/: CMakeLists.txt
src/common/Audio/: Envelope.cpp  Envelope.h  InstrumentOutput.cpp  InstrumentOutput.h  Pedal.h  Server.h  StringInstrument.cpp  StringInstrument.h  Wave.h
src/common/Audio/Wave/: BaseWave.cpp  BaseWave.h  NullWave.cpp  NullWave.h  SawtoothWave.cpp  SawtoothWave.h  SineWave.cpp  SineWave.h  SquareWave.cpp  SquareWave.h  TriangleWave.cpp  TriangleWave.h
src/common/Color/: Color.h
src/common/Config/: Config.h  Config.h.in
src/common/Event/: JackProcess.h
src/common/Instrument/: BaseInstrument.h  StringInstrument.cpp  StringInstrument.h
src/common/Util/: Letters.h  Numbers.h
src/qt/: CMakeLists.txt  Resources.qrc  Window.cpp  Window.h  Window.ui  main.cpp
src/qt/Bridge/: Module.cpp  Module.h  StringArea.h
src/qt/Config/: Config.h.in
src/qt/Instrument/: AreaData.h  Bridge.cpp  Bridge.h  FretArea.cpp  FretArea.h  MidiReader.cpp  MidiReader.h  Module.cpp  Module.h  Neck.cpp  Neck.h  NoteDisplay.cpp  NoteDisplay.h  PedalArea.cpp  PedalArea.h  PedalWrap.cpp  PedalWrap.h  PortInterface.h  StringArea.cpp  StringArea.h  Tonebar.cpp  Tonebar.h
src/qt/Instrument/Events/: StringDownEvent.h  StringUpEvent.h
src/qt/Midi/: MidiReader.cpp  MidiReader.h
src/qt/Module/: BaseModule.h
src/qt/Settings/: EnvelopeEditor.cpp  EnvelopeEditor.h  EnvelopeEditor.ui  InstrumentPresetLoader.cpp  InstrumentPresetLoader.h  InstrumentPresetWriter.cpp  InstrumentPresetWriter.h  Layout.cpp  Layout.h  PedalEditArea.cpp  PedalEditArea.h  PedalEditArea.ui  PedalEditor.cpp  PedalEditor.h  PedalEditor.ui  PresetLoader.h  Settings.ui  SoundEditor.cpp  SoundEditor.h  SoundEditor.ui  StringEditArea.cpp  StringEditArea.h  StringEditArea.ui  StringEditor.cpp  StringEditor.h  StringEditor.ui
src/qt/Settings/Events/: UpdateEvent.h
src/qt/Styles/: DarkStyle.qss
src/qt/Widget/: AbstractDropdown.h  BackgroundImage.cpp  BackgroundImage.h  BaseWidget.h  Line.h  TreeNode.cpp  TreeNode.h
src/qt/Widget/Events/: NodeRemoveEvent.h
tools/: full_pull.sh  install.sh  watch_build.sh
